revert: 恢复 main 内容为 1.21.11 分支状态
修复合并提交 2e6471025 的错误：该合并以 26.x 上游为基底解决冲突，导致
mcVersion/apiVersion 变为 26.2、paperweight beta.21、Java 25 工具链及
patches/paper-api/paper-server 大量文件偏离 1.21.11。

本提交不改写历史，将 main 的树精确恢复为 ver/1.21.11（9e1ddc416）的内容。
游戏版本红线：始终保持 Minecraft 1.21.11。